change file name from .png to .webp

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div>
           <span class="tag">🚕 Đón nhanh – Giá minh bạch – Xe sạch</span>
           <h1>Đặt taxi tại Hải Phòng <br/>chỉ với một chạm</h1>
-          <img src="banner.png" alt="Taxi Hải Phòng banner" style="width:100%;border-radius:14px;margin:16px 0;">
+          <img src="banner.webp" alt="Taxi Hải Phòng banner" style="width:100%;border-radius:14px;margin:16px 0;">
           <p class="lead">Tổng đài 24/7 – có hoá đơn VAT, nhận hợp đồng đường dài, sân bay Cát Bi. Ưu đãi cho khách quen & doanh nghiệp.</p>
           <div class="badges">
             <a class="btn" href="tel:0328384576">📞 Gọi ngay</a>
