update the banner image and index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     .hero{background:radial-gradient(1200px 600px at 70% -10%, #fff4d6, transparent 60%),linear-gradient(180deg,#fff, #fff)}
     .hero img.fullwidth{width:100%;height:auto;display:block;border-radius:0;margin:0}
     @media (max-width:900px){.hero .grid{grid-template-columns:1fr;}}
-    .tag{display:inline-block;background:#111827;color:#fff;border-radius:999px;font-size:12px;padding:6px 10px;margin-bottom:16px}
+    .tag{display:inline-block;background:#111827;color:#fff;border-radius:999px;font-size:12px;padding:6px 10px;margin:16px 0}
     h1{font-size:clamp(28px,5vw,46px);line-height:1.1;margin:0 0 10px}
     .lead{font-size:clamp(16px,2.4vw,20px);opacity:.8}
     .badges{display:flex;gap:10px;flex-wrap:wrap;margin-top:18px}
@@ -69,8 +69,8 @@
     <section class="hero">
       <img class="fullwidth" src="banner.webp" alt="Taxi Hải Phòng banner">
       <div class="container">
-        <span class="tag">🚕 Đón nhanh – Giá minh bạch – Xe sạch</span>
         <h1>Đặt taxi tại Hải Phòng <br/>chỉ với một chạm</h1>
+        <span class="tag">🚕 Đón nhanh – Giá minh bạch – Xe sạch</span>
         <p class="lead">Tổng đài 24/7 – có hoá đơn VAT, nhận hợp đồng đường dài, sân bay Cát Bi. Ưu đãi cho khách quen & doanh nghiệp.</p>
         <div class="badges">
           <a class="btn" href="tel:0328384576">📞 Gọi ngay</a>
