--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     .brand .logo{width:38px;height:38px;border-radius:10px;background:linear-gradient(135deg,var(--brand),var(--brand-2));display:grid;place-items:center;color:#111827;font-weight:900}
     .phone{font-weight:800;letter-spacing:.5px}
     .hero{background:radial-gradient(1200px 600px at 70% -10%, #fff4d6, transparent 60%),linear-gradient(180deg,#fff, #fff)}
-    .hero img.fullwidth{width:100%;height:auto;display:block;border-radius:0;margin:0}
+    .hero img.fullwidth{width:100%;height:auto;display:block;border-radius:0;margin:0 0 30px 0}
     @media (max-width:900px){.hero .grid{grid-template-columns:1fr;}}
     .tag{display:inline-block;background:#111827;color:#fff;border-radius:999px;font-size:12px;padding:6px 10px;margin:16px 0}
     h1{font-size:clamp(28px,5vw,46px);line-height:1.1;margin:0 0 10px}
@@ -37,9 +37,8 @@
     @media (max-width:640px){.features{grid-template-columns:1fr} }
     .section{padding:40px 0}
     .muted{color:#6b7280}
-    .fleet{display:grid;grid-template-columns:repeat(3,1fr);gap:16px}
-    @media (max-width:900px){.fleet{grid-template-columns:1fr 1fr}}
-    @media (max-width:640px){.fleet{grid-template-columns:1fr}}
+    .fleet{display:grid;grid-template-columns:repeat(2,1fr);gap:16px}
+    @media (max-width:900px){.fleet{grid-template-columns:1fr}}
     .fleet img{width:100%;height:200px;object-fit:cover;border-radius:16px;border:1px solid #eee}
     .footer{background:#0f172a;color:#cbd5e1;padding:30px 0;margin-top:30px}
     .footer a{color:#fde68a}
@@ -76,9 +75,12 @@
           <a class="btn" href="tel:0328384576">📞 Gọi ngay</a>
         </div>
         <div class="features">
-          <div class="card"><strong>⏱️ Đón nhanh</strong><br/><span class="muted">Tìm xe gần nhất trong vài phút</span></div>
-          <div class="card"><strong>🧾 Hóa đơn đầy đủ</strong><br/><span class="muted">Xuất hóa đơn cho cá nhân & công ty</span></div>
+          <div class="card"><strong>⏱️ Đón nhanh</strong><br/><span class="muted">Tìm xe gần nhất trong phút chốc</span></div>
           <div class="card"><strong>🧽 Xe sạch – lịch sự</strong><br/><span class="muted">Tài xế thân thiện, chuyên nghiệp</span></div>
+          <div class="card"><strong>🚗 Nhiều lựa chọn</strong><br/><span class="muted">Số lượng xe đa dạng, 4 chỗ đến 45 chỗ, xe đời mới hiện đại, tiện nghi, sạch sẽ</span></div>
+          <div class="card"><strong>💰 Giá cả cạnh tranh</strong><br/><span class="muted">Giá cả được niêm yết công khai và rẻ hơn tới 10% so với giá truyền thống</span></div>
+          <div class="card"><strong>🔒 Tin cậy</strong><br/><span class="muted">Các xe đều có thời gian sử dụng dưới 3 năm và được bảo dưỡng thường xuyên</span></div>
+          <div class="card"><strong>👨‍✈️ Tài xế chất lượng</strong><br/><span class="muted">Tài xế được đào tạo bài bản và có nhiều năm kinh nghiệm, đảm bảo an toàn tuyệt đối</span></div>
         </div>
       </div>
     </section>
@@ -87,9 +89,8 @@
       <div class="container">
         <h2 style="margin:0 0 16px">Đội xe</h2>
         <div class="fleet">
-          <img src="https://images.unsplash.com/photo-1519638399535-1b036603ac77?q=80&w=1200&auto=format&fit=crop" alt="Xe 4 chỗ">
-          <img src="https://images.unsplash.com/photo-1652151125819-794aeba5c722?q=80&w=1200&auto=format&fit=crop" alt="Xe 7 chỗ">
-          <img src="https://images.unsplash.com/photo-1502877338535-766e1452684a?q=80&w=1200&auto=format&fit=crop" alt="Xe hợp đồng">
+          <img src="xe1.webp" alt="Xe 1">
+          <img src="xe2.webp" alt="Xe 2">
         </div>
       </div>
     </section>
